[gd_scene load_steps=144 format=2]

[ext_resource path="res://assets/fonts/FFFFORWA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/FFFFORWA.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/art/tilesets/tiles.tres" type="TileSet" id=3]
[ext_resource path="res://assets/art/black.png" type="Texture" id=4]
[ext_resource path="res://scenes/PauseScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Score.gd" type="Script" id=7]
[ext_resource path="res://scenes/PickupItem03.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Darkness.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Main.gd" type="Script" id=12]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/art/player_interface/health_bar/Luna_HealthBar_100_1.png" type="Texture" id=16]
[ext_resource path="res://assets/art/player_interface/health_bar/Luna_HealthBar_75_1.png" type="Texture" id=17]
[ext_resource path="res://assets/art/player_interface/health_bar/Luna_HealthBar_25_1.png" type="Texture" id=18]
[ext_resource path="res://assets/art/player_interface/health_bar/Luna_HealthBar_50_1.png" type="Texture" id=19]
[ext_resource path="res://assets/art/player_interface/health_bar/Luna_HealthBar_Death_1.png" type="Texture" id=20]
[ext_resource path="res://assets/art/player_interface/oxygen_bar/Luna_OxygenBar_10.png" type="Texture" id=21]
[ext_resource path="res://assets/art/player_interface/oxygen_bar/Luna_OxygenBar_50.png" type="Texture" id=22]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 22 )
region = Rect2( 640, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 22 )
region = Rect2( 1280, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 22 )
region = Rect2( 0, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 22 )
region = Rect2( 640, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 22 )
region = Rect2( 1280, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 22 )
region = Rect2( 0, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 22 )
region = Rect2( 640, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 22 )
region = Rect2( 1280, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 21 )
region = Rect2( 640, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 21 )
region = Rect2( 0, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 21 )
region = Rect2( 640, 640, 640, 640 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "50",
"speed": 12.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "10",
"speed": 12.0
} ]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.129412, 0.117647, 0.94902, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="DynamicFont" id=17]
size = 8
use_mipmaps = true
extra_spacing_top = 3
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 20 )
region = Rect2( 640, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 20 )
region = Rect2( 1280, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 20 )
region = Rect2( 1920, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 20 )
region = Rect2( 0, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 20 )
region = Rect2( 640, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 20 )
region = Rect2( 1280, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 20 )
region = Rect2( 1920, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 20 )
region = Rect2( 0, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 20 )
region = Rect2( 640, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 20 )
region = Rect2( 1280, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 20 )
region = Rect2( 1920, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 20 )
region = Rect2( 0, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 20 )
region = Rect2( 640, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 20 )
region = Rect2( 1280, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 20 )
region = Rect2( 1920, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 19 )
region = Rect2( 640, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 19 )
region = Rect2( 1280, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 19 )
region = Rect2( 1920, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 19 )
region = Rect2( 0, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 19 )
region = Rect2( 640, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 19 )
region = Rect2( 1280, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 19 )
region = Rect2( 1920, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 19 )
region = Rect2( 0, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 19 )
region = Rect2( 640, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 19 )
region = Rect2( 1280, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 19 )
region = Rect2( 1920, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 19 )
region = Rect2( 0, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 19 )
region = Rect2( 640, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 19 )
region = Rect2( 1280, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 19 )
region = Rect2( 1920, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 19 )
region = Rect2( 0, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 19 )
region = Rect2( 640, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 19 )
region = Rect2( 1280, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 19 )
region = Rect2( 1920, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 17 )
region = Rect2( 640, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 17 )
region = Rect2( 1280, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 17 )
region = Rect2( 1920, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 17 )
region = Rect2( 2560, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 17 )
region = Rect2( 0, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 17 )
region = Rect2( 640, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 17 )
region = Rect2( 1280, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 17 )
region = Rect2( 1920, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 17 )
region = Rect2( 2560, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 17 )
region = Rect2( 0, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 17 )
region = Rect2( 640, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 17 )
region = Rect2( 1280, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 17 )
region = Rect2( 1920, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 17 )
region = Rect2( 2560, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 17 )
region = Rect2( 0, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 17 )
region = Rect2( 640, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 17 )
region = Rect2( 1280, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 17 )
region = Rect2( 1920, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 17 )
region = Rect2( 2560, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 17 )
region = Rect2( 0, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 17 )
region = Rect2( 640, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 17 )
region = Rect2( 1280, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 17 )
region = Rect2( 1920, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 17 )
region = Rect2( 2560, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 18 )
region = Rect2( 640, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 18 )
region = Rect2( 1280, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 18 )
region = Rect2( 1920, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 18 )
region = Rect2( 2560, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 18 )
region = Rect2( 0, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 18 )
region = Rect2( 640, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 18 )
region = Rect2( 1280, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 18 )
region = Rect2( 1920, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 18 )
region = Rect2( 2560, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 18 )
region = Rect2( 0, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 18 )
region = Rect2( 640, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 18 )
region = Rect2( 1280, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 18 )
region = Rect2( 1920, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 18 )
region = Rect2( 2560, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 18 )
region = Rect2( 0, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 18 )
region = Rect2( 640, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 18 )
region = Rect2( 1280, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 18 )
region = Rect2( 1920, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 18 )
region = Rect2( 2560, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 18 )
region = Rect2( 0, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 18 )
region = Rect2( 640, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 18 )
region = Rect2( 1280, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 18 )
region = Rect2( 1920, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 18 )
region = Rect2( 2560, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 16 )
region = Rect2( 640, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 16 )
region = Rect2( 1280, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 16 )
region = Rect2( 1920, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 16 )
region = Rect2( 0, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 16 )
region = Rect2( 640, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 16 )
region = Rect2( 1280, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 16 )
region = Rect2( 1920, 640, 640, 640 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 16 )
region = Rect2( 0, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 16 )
region = Rect2( 640, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 16 )
region = Rect2( 1280, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 16 )
region = Rect2( 1920, 1280, 640, 640 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 16 )
region = Rect2( 0, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 16 )
region = Rect2( 640, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 16 )
region = Rect2( 1280, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 16 )
region = Rect2( 1920, 1920, 640, 640 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 16 )
region = Rect2( 0, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 16 )
region = Rect2( 640, 2560, 640, 640 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 16 )
region = Rect2( 1280, 2560, 640, 640 )

[sub_resource type="SpriteFrames" id=123]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "Death",
"speed": 12.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "50",
"speed": 12.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "75",
"speed": 12.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "25",
"speed": 12.0
}, {
"frames": [ SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ) ],
"loop": true,
"name": "100",
"speed": 12.0
} ]

[sub_resource type="StyleBoxFlat" id=124]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=125]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Tutorial" type="Node"]
script = ExtResource( 12 )
oxygen = 100

[node name="Player" parent="." instance=ExtResource( 13 )]
position = Vector2( 431.799, 957.98 )
z_index = 2

[node name="StartPosition" type="Position2D" parent="Player"]
position = Vector2( -431.799, -957.98 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Player"]
position = Vector2( -6.36395, 2.02002 )
scale = Vector2( 3.2, 3.2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65556, -1073741824, 0, 65576, -1073741824, 0, 65577, -1073741824, 0, 131092, -1073741824, 0, 131093, -1073741824, 0, 131110, -1073741824, 0, 131111, -1073741824, 0, 131112, -1073741824, 0, 196630, -1073741824, 0, 196645, -1073741824, 0, 196646, -1073741824, 0, 262167, -1073741824, 0, 262168, -1073741824, 0, 262180, -1073741824, 0, 262181, -1073741824, 0, 327704, -1073741824, 0, 327714, -1073741824, 0, 327715, -1073741824, 0, 393233, -1073741824, 0, 393234, -1073741824, 0, 393235, -1073741824, 0, 393236, -1073741824, 0, 393237, -1073741824, 0, 393238, -1073741824, 0, 393241, -1073741824, 0, 393242, -1073741824, 0, 393243, -1073741824, 0, 393249, -1073741824, 0, 393250, -1073741824, 0, 393255, -1073741824, 0, 393256, -1073741824, 0, 393257, -1073741824, 0, 393258, -1073741824, 0, 393259, -1073741824, 0, 458768, -1073741824, 0, 458769, -1073741824, 0, 458774, -1073741824, 0, 458775, -1073741824, 0, 458779, -1073741824, 0, 458790, -1073741824, 0, 458791, -1073741824, 0, 458795, -1073741824, 0, 458796, -1073741824, 0, 524304, -1073741824, 0, 524311, -1073741824, 0, 524325, -1073741824, 0, 524332, -1073741824, 0, 524333, -1073741824, 0, 589839, -1073741824, 0, 589840, -1073741824, 0, 589847, -1073741824, 0, 589848, -1073741824, 0, 589860, -1073741824, 0, 589869, -1073741824, 0, 655375, -1073741824, 0, 655376, -1073741824, 0, 655377, -1073741824, 0, 655378, -1073741824, 0, 655379, -1073741824, 0, 655384, -1073741824, 0, 655395, -1073741824, 0, 655396, -1073741824, 0, 655397, -1073741824, 0, 655398, -1073741824, 0, 655405, -1073741824, 0, 720911, -1073741824, 0, 720915, -1073741824, 0, 720916, -1073741824, 0, 720920, -1073741824, 0, 720931, -1073741824, 0, 720934, -1073741824, 0, 720935, -1073741824, 0, 720941, -1073741824, 0, 786447, -1073741824, 0, 786448, -1073741824, 0, 786452, -1073741824, 0, 786455, -1073741824, 0, 786456, -1073741824, 0, 786467, -1073741824, 0, 786468, -1073741824, 0, 786471, -1073741824, 0, 786472, -1073741824, 0, 786477, -1073741824, 0, 851984, -1073741824, 0, 851985, -1073741824, 0, 851988, -1073741824, 0, 851990, -1073741824, 0, 851991, -1073741824, 0, 851997, -1073741824, 0, 851998, -1073741824, 0, 852004, -1073741824, 0, 852008, -1073741824, 0, 852012, -1073741824, 0, 852013, -1073741824, 0, 917521, -1073741824, 0, 917522, -1073741824, 0, 917523, -1073741824, 0, 917524, -1073741824, 0, 917525, -1073741824, 0, 917526, -1073741824, 0, 917532, -1073741824, 0, 917533, -1073741824, 0, 917540, -1073741824, 0, 917541, -1073741824, 0, 917542, -1073741824, 0, 917544, -1073741824, 0, 917547, -1073741824, 0, 917548, -1073741824, 0, 983067, -1073741824, 0, 983068, -1073741824, 0, 983078, -1073741824, 0, 983079, -1073741824, 0, 983080, -1073741824, 0, 983081, -1073741824, 0, 983082, -1073741824, 0, 983083, -1073741824, 0, 1048602, -1073741824, 0, 1114137, -1073741824, 0, 1114138, -1073741824, 0, 1114139, -1073741824, 0, 1114140, -1073741824, 0, 1114141, -1073741824, 0, 1114142, -1073741824, 0, 1114143, -1073741824, 0, 1114144, -1073741824, 0, 1245200, -1073741824, 0, 1245230, -1073741824, 0, 1245231, -1073741824, 0, 1310736, -1073741824, 0, 1310737, -1073741824, 0, 1310738, -1073741824, 0, 1310739, -1073741824, 0, 1310764, -1073741824, 0, 1310765, -1073741824, 0, 1310766, -1073741824, 0, 1376275, -1073741824, 0, 1376276, -1073741824, 0, 1376277, -1073741824, 0, 1376278, -1073741824, 0, 1376298, -1073741824, 0, 1376299, -1073741824, 0, 1376300, -1073741824, 0, 1441814, -1073741824, 0, 1441815, -1073741824, 0, 1441816, -1073741824, 0, 1441817, -1073741824, 0, 1441818, -1073741824, 0, 1441832, -1073741824, 0, 1441833, -1073741824, 0, 1441834, -1073741824, 0, 1507354, -1073741824, 0, 1507355, -1073741824, 0, 1507356, -1073741824, 0, 1507357, -1073741824, 0, 1507358, -1073741824, 0, 1507359, -1073741824, 0, 1507360, -1073741824, 0, 1507361, -1073741824, 0, 1507362, -1073741824, 0, 1507363, -1073741824, 0, 1507364, -1073741824, 0, 1507365, -1073741824, 0, 1507366, -1073741824, 0, 1507367, -1073741824, 0, 1507368, -1073741824, 0, 2031616, 0, 0, 2031617, 0, 0, 2031618, 0, 0, 2031619, 0, 0, 2031620, 0, 0, 2031621, 0, 0, 2031622, 0, 0, 2031623, 0, 0, 2031624, 0, 0, 2031625, 0, 0, 2031626, 0, 0, 2031627, 0, 0, 2031628, 0, 0, 2031629, 0, 0, 2031630, 0, 0, 2031631, 0, 0, 2031632, 0, 0, 2031633, 0, 0, 2031634, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031641, 0, 0, 2031642, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031659, 0, 0, 2031660, 0, 0, 2031661, 0, 0, 2031662, 0, 0, 2031663, 0, 0, 2031664, 0, 0, 2031665, 0, 0, 2031666, 0, 0, 2031667, 0, 0, 2031668, 0, 0, 2031669, 0, 0, 2031670, 0, 0, 2031671, 0, 0, 2031672, 0, 0, 2031673, 0, 0, 2031674, 0, 0, 2031675, 0, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 1
offset = Vector2( 520, -720 )
transform = Transform2D( 1, 0, 0, 1, 520, -720 )

[node name="Score" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.228358
anchor_top = 0.697028
anchor_right = 0.228358
anchor_bottom = 0.697028
margin_left = -38.4473
margin_top = -0.790344
margin_right = 43.5527
margin_bottom = 41.2097
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="CanvasLayer/Score"]
wait_time = 0.1
autostart = true

[node name="PauseScene" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
position = Vector2( 757.228, 753.176 )

[node name="Oxygen" type="Label" parent="CanvasLayer"]
margin_left = 1032.34
margin_top = 773.532
margin_right = 1166.34
margin_bottom = 816.532
custom_fonts/font = ExtResource( 2 )
text = "Oxygen"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenAnimation" type="AnimatedSprite" parent="CanvasLayer/Oxygen"]
position = Vector2( 134, 120.208 )
frames = SubResource( 14 )
animation = "50"

[node name="OxygenBar" type="ProgressBar" parent="CanvasLayer/Oxygen/OxygenAnimation"]
margin_left = -270.354
margin_top = -69.5745
margin_right = 125.646
margin_bottom = -54.5745
custom_styles/fg = SubResource( 15 )
custom_styles/bg = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenTimer" type="Timer" parent="CanvasLayer/Oxygen"]
one_shot = true

[node name="Health" type="Label" parent="CanvasLayer"]
margin_left = -258.0
margin_top = 768.0
margin_right = -127.0
margin_bottom = 811.0
custom_fonts/font = ExtResource( 2 )
text = "Health"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthAnimation" type="AnimatedSprite" parent="CanvasLayer/Health"]
position = Vector2( 0, -44.1298 )
frames = SubResource( 123 )
animation = "100"

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/Health/HealthAnimation"]
margin_left = -105.0
margin_top = 100.0
margin_right = 275.0
margin_bottom = 118.0
rect_scale = Vector2( 1, 0.833333 )
custom_styles/fg = SubResource( 124 )
custom_styles/bg = SubResource( 125 )
custom_fonts/font = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 1, 1 )

[node name="TEMP BACKGROUND" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.774414, 0.142178, 0.142178, 1 )
position = Vector2( 960, 544 )
z_index = -100
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1080 )
__meta__ = {
"_editor_description_": ""
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Darkness" parent="." instance=ExtResource( 9 )]

[node name="GUI" parent="." instance=ExtResource( 6 )]

[node name="StartButton" parent="GUI" index="1"]
visible = false

[node name="ExitButton" parent="GUI" index="2"]
visible = false

[node name="Sprite" parent="GUI" index="4"]
visible = false

[node name="Item3" parent="." groups=[
"Pickups",
"Resettable Pickups",
] instance=ExtResource( 8 )]
pause_mode = 1
position = Vector2( 909.25, 950.5 )

[connection signal="Dead" from="Player" to="." method="_on_Player_Dead"]
[connection signal="Dead" from="Player" to="GUI" method="_on_Player_Dead"]
[connection signal="screen_exited" from="Player/VisibilityNotifier2D" to="Player" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="CanvasLayer/Score/ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/Oxygen/OxygenTimer" to="." method="_on_OxygenTimer_timeout"]
[connection signal="DamageArea_PlayerCollision" from="Darkness" to="Player" method="_on_Darkness_DamageArea_PlayerCollision"]

[editable path="GUI"]
